small fixes: about icons, replace whitespace with dashes in body ID

--- a/views/style/buttons.styl
+++ b/views/style/buttons.styl
@@ -90,6 +90,8 @@ button[disabled],
 		padding: 4px 8px 3px !important
 		font-size: 9px
 		height: auto
+	&.regular
+		font-size: 12px
 	&.round
 		bdrz(30px)
 	&.select
