--- a/views/style/pages/content.styl
+++ b/views/style/pages/content.styl
@@ -13,9 +13,6 @@
 		.content
 			padding-left default_margin
 
-	p
-		padding-right 10px
-
 	#scrollTop
 		position fixed
 		right default_margin
